make it easy to change mode cpu, opencl, sycl and no absolute path for opencl kernel

--- a/include/common.hpp.conf
+++ b/include/common.hpp.conf
@@ -30,6 +30,8 @@
 #include <opencv2/opencv.hpp>
 
 #define DATA_ROOT_PATH "@DATA_ROOT_PATH@"
+#define KERNEL_FILE "@KERNEL_FILE@"
+
 
 // as defined in the 2012/2014 CDNet evaluation scripts
 #define DATASETUTILS_POSITIVE_VAL    uchar(255)
