add possibility to choose device (cpu, gpu) with cmake cache entry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE INTERNAL "")
 set(DATA_ROOT_PATH "${CMAKE_SOURCE_DIR}/data" CACHE INTERNAL "")
 set(KERNEL_FILE "${CMAKE_SOURCE_DIR}/src/kernel.cl" CACHE INTERNAL "")
+set(OPENCL_DEVICE "${CMAKE_SOURCE_DIR}/src/kernel.cl" CACHE INTERNAL "")
+
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 set(COMPUTECPP_PACKAGE_ROOT_DIR /usr/local/computecpp)
