--- a/include/common.hpp.conf
+++ b/include/common.hpp.conf
@@ -31,7 +31,7 @@
 
 #define DATA_ROOT_PATH "@DATA_ROOT_PATH@"
 #define KERNEL_FILE "@KERNEL_FILE@"
-
+#define OPENCL_DEVICE "@OPENCL_DEVICE@"
 
 // as defined in the 2012/2014 CDNet evaluation scripts
 #define DATASETUTILS_POSITIVE_VAL    uchar(255)
